Fix large card layout on mobile

--- a/src-ui/src/app/components/document-list/document-card-large/document-card-large.component.scss
+++ b/src-ui/src/app/components/document-list/document-card-large/document-card-large.component.scss
@@ -15,7 +15,7 @@
 .search-score-bar {
   width: 100px;
   height: 5px;
-  margin-top: 2px;
+  margin-top: 1px;
 }
 
 .document-card-check {
